--- a/index.html
+++ b/index.html
@@ -75,30 +75,38 @@
                 <!--------- Navigation list --------->
                 <ul class="main-nav__list">
                     <li class="current main-nav__list-item">
-                        <a class="current main-nav__link" href="#home" aria-current="page"
-                            aria-label="link to scroll to the home section">
-                            <i class="main-nav__icon fa fa-home" aria-hidden="true"></i>Home
-                        </a>
+                        <button>
+                            <a class="current main-nav__link" href="#home" aria-current="page"
+                                aria-label="link to scroll to the home section">
+                                <i class="main-nav__icon fa fa-home" aria-hidden="true"></i>Home
+                            </a>
+                        </button>
                     </li>
 
                     <li class="main-nav__list-item">
-                        <a class="main-nav__link" href="#menu" aria-label="link to scroll to the menu section">
-                            <i class="main-nav__icon fa fa-cutlery" aria-hidden="true"></i>Menu
-                        </a>
+                        <button>
+                            <a class="main-nav__link" href="#menu" aria-label="link to scroll to the menu section">
+                                <i class="main-nav__icon fa fa-cutlery" aria-hidden="true"></i>Menu
+                            </a>
+                        </button>
                     </li>
 
                     <li class="main-nav__list-item">
-                        <a class="main-nav__link" href="#special-drinks"
-                            aria-label="link to scroll to the special drinks section">
-                            <i class="main-nav__icon fa fa-coffee" aria-hidden="true"></i>Special
-                        </a>
+                        <button>
+                            <a class="main-nav__link" href="#special-drinks"
+                                aria-label="link to scroll to the special drinks section">
+                                <i class="main-nav__icon fa fa-coffee" aria-hidden="true"></i>Special
+                            </a>
+                        </button>
                     </li class="main-nav__list-item">
 
                     <li class="main-nav__list-item main-nav__list-item--plans">
-                        <a class="main-nav__link main-nav__link--plans" href="#plans-section"
-                            aria-label="link to scroll to the plans section">
-                            <i class="main-nav__icon main-nav__icon--plans fa fa-gem" aria-hidden="true"></i>Plans
-                        </a>
+                        <button>
+                            <a class="main-nav__link main-nav__link--plans" href="#plans-section"
+                                aria-label="link to scroll to the plans section">
+                                <i class="main-nav__icon main-nav__icon--plans fa fa-gem" aria-hidden="true"></i>Plans
+                            </a>
+                        </button>
                     </li>
                 </ul>
                 <!----------------------------------->
@@ -297,7 +305,7 @@
                             <h4 class="menu__card-title">Frappé</h4>
                         </li>
                         <li class="menu__card">
-                            <img class="menu__card-img" src="./assets/imgs/flat-white.jpg" alt="flat white">
+                            <img class="menu__card-img" src="./assets/imgs/flat-white2.jpg" alt="flat white">
                             <h4 class="menu__card-title">Flat white</h4>
                         </li>
                     </ul>
