--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <!------------- Slide --------------->
                 <div class="hero__slide active">
                     <!---------- Slide image ------------>
-                    <img class="hero__slide-img" src="./assets/imgs/cappuccino2.png"
+                    <img class="hero__slide-img" src="./assets/imgs/cappuccino.png"
                         alt="Slide one image: Delicious creamy Cappuccino.">
                     <!----------------------------------->
                 </div>
