--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
 
                 <!---------- User options ----------->
                 <div class="main-nav__btns">
-                    <button class="highlited-btn primary"><i class="main-nav__icon fa fa-user" aria-hidden="true"></i>
+                    <button class="highlited-btn primary" aria-label="Login button"><i class="main-nav__icon fa fa-user"
+                            aria-hidden="true"></i>
                         Login</button>
-                    <button class="highlited-btn secondary"><i class="main-nav__icon fa fa-shopping-cart"
-                            aria-hidden="true"></i> Cart</button>
+                    <button class="highlited-btn secondary" aria-label="Cart button"><i
+                            class="main-nav__icon fa fa-shopping-cart" aria-hidden="true"></i> Cart</button>
                 </div>
                 <!----------------------------------->
             </div>
@@ -234,8 +235,8 @@
 
                     <!---------- Slide buttons ---------->
                     <div class="hero__slide-btns">
-                        <button class="highlited-btn primary">See drink</button>
-                        <button class="highlited-btn secondary">View in app</button>
+                        <button class="hero__slide-btn highlited-btn primary">See drink</button>
+                        <button class="hero__slide-btn highlited-btn secondary">View in app</button>
                     </div>
                     <!----------------------------------->
                 </div>
