--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             </div>
 
             <div class="menu__content">
-                <!---------- Drinks carousel ------------>
+                <!-------- Drinks carousel ---------->
                 <div class="menu__carousel">
                     <button class="menu__slider-btn prev"><i class="fa fa-chevron-left"></i></button>
 
@@ -323,6 +323,77 @@
 
                     <button class="menu__slider-btn next"><i class="fa fa-chevron-right"></i></button>
                 </div>
+                <!----------------------------------->
+
+                <!-------- Drinks carousel ---------->
+                <div class="menu__carousel">
+                    <button class="menu__slider-btn prev"><i class="fa fa-chevron-left"></i></button>
+
+                    <div class="menu__drinks">
+                        <ul class="menu__card-list">
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Au Lait</h4>
+                                <img class="menu__card-img" src="./assets/imgs/cafe-au-lait2.jpg" alt="café au lait">
+                            </li>
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Cortadito</h4>
+                                <img class="menu__card-img" src="./assets/imgs/cortadito2.jpg" alt="cortadito">
+                            </li>
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Cubano</h4>
+                                <img class="menu__card-img" src="./assets/imgs/cubano2.jpg" alt="cubano">
+                            </li>
+                        </ul>
+
+                        <ul class="menu__card-list">
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Eiskaffee</h4>
+                                <img class="menu__card-img" src="./assets/imgs/eiskaffee2.jpg" alt="eiskaffee">
+                            </li>
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">De Olla</h4>
+                                <img class="menu__card-img" src="./assets/imgs/cafe-de-olla2.jpg" alt="de olla">
+                            </li>
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Mazagran</h4>
+                                <img class="menu__card-img" src="./assets/imgs/mazagran2.jpg" alt="mazagran">
+                            </li>
+                        </ul>
+
+                        <ul class="menu__card-list">
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Red Eye</h4>
+                                <img class="menu__card-img" src="./assets/imgs/red-eye2.jpg" alt="red eye">
+                            </li>
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Gibraltar</h4>
+                                <img class="menu__card-img" src="./assets/imgs/gibraltar2.jpg" alt="gibraltar">
+                            </li>
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Piccolo</h4>
+                                <img class="menu__card-img" src="./assets/imgs/piccolo2.jpg" alt=" piccolo">
+                            </li>
+                        </ul>
+
+                        <ul class="menu__card-list">
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Con Leche</h4>
+                                <img class="menu__card-img" src="./assets/imgs/con-leche2.jpg" alt="con leche">
+                            </li>
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Breve</h4>
+                                <img class="menu__card-img" src="./assets/imgs/breve2.jpg" alt="breve">
+                            </li>
+                            <li class="menu__card">
+                                <h4 class="menu__card-title">Galão</h4>
+                                <img class="menu__card-img" src="./assets/imgs/galao2.jpg" alt="galão">
+                            </li>
+                        </ul>
+                    </div>
+
+                    <button class="menu__slider-btn next"><i class="fa fa-chevron-right"></i></button>
+                </div>
+                <!----------------------------------->
             </div>
             <!----------------------------------->
 
